objects/ssot__Location__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedFulfillmentOrderCount__c</fullName>
        <label>Assigned Fulfillment Order Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CloseDate__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConstructionEndDate__c</fullName>
        <label>Construction End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConstructionStartDate__c</fullName>
        <label>Construction Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultProcessingTimeUnit__c</fullName>
        <label>Default Processing Time Unit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultProcessingTime__c</fullName>
        <label>Default Processing Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DrivingDirectionsText__c</fullName>
        <label>Driving Directions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderCapacityNumber__c</fullName>
        <label>Fulfillment Order Capacity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Location Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsHealthcareLocation__c</fullName>
        <label>Is Healthcare Location</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsInventoryLocation__c</fullName>
        <label>Is Inventory Location</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMobileLocation__c</fullName>
        <label>Is Mobile Location</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationAreaSize__c</fullName>
        <label>Location Area Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationHierarchyLevelNumber__c</fullName>
        <label>Location Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationStatus__c</fullName>
        <label>Location Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationType__c</fullName>
        <label>Location Type Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Location_AccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location_AccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Location_AccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Location_AccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Location_CreatedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location_CreatedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Location_CreatedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Location_CreatedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Location_OwnerId_map_UserGroup_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location_OwnerId_map_UserGroup_Id_N_1</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>Location_OwnerId_map_UserGroup_Id_N_1</relationshipLabel>
        <relationshipName>Location_OwnerId_map_UserGroup_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Location_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Location_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Location_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__LogoName__c</fullName>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MeetingLinkUrl__c</fullName>
        <label>Meeting Link URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupantCount__c</fullName>
        <label>Occupant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OpenDate__c</fullName>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentLocationId__c</fullName>
        <label>Parent Location Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PossessionDate__c</fullName>
        <label>Possession Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryPropertyFunction__c</fullName>
        <label>Primary Property Function Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RemodelEndDate__c</fullName>
        <label>Remodel End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RemodelStartDate__c</fullName>
        <label>Remodel Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RootLocationId__c</fullName>
        <label>Root Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TimeZone__c</fullName>
        <label>Time Zone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitorAddressId__c</fullName>
        <label>Visitor Address Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761214534_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location_VisitorAddressId_map_Addres_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>Location_VisitorAddressId_map_Addres_rel</relationshipLabel>
        <relationshipName>rel_1697761214534_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761215291_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location_ParentLocationId_map_Locati_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>Location_ParentLocationId_map_Locati_rel</relationshipLabel>
        <relationshipName>rel_1697761215291_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009459063_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location_RootLocationId_map_Location_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>Location_RootLocationId_map_Location_rel</relationshipLabel>
        <relationshipName>rel_1702009459063_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>